[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2.1", features = ["serde"] }
once_cell = "1.4.0"
config = { version = "0.11", features = ["yaml"] }
sled = "0.34"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.22", features = ["serialize"] }
rand = "0.8.3"
thiserror = "1.0.24"
axum = "0.4.8"
